--- a/static/main.css
+++ b/static/main.css
@@ -210,3 +210,12 @@ a:visited {
     text-align: right;
     white-space: nowrap;
 }
+
+.content-columns + p {
+    margin-top: 0;
+}
+
+.logo {
+    margin-top: 1.2rem;
+    height: 120px;
+}
