--- a/static/main.css
+++ b/static/main.css
@@ -215,7 +215,13 @@ a:visited {
     margin-top: 0;
 }
 
+.logo-container {
+    padding-left: 0.5rem;
+    max-width: 40%;
+    align-self: center;
+}
+
 .logo {
-    margin-top: 1.2rem;
-    height: 120px;
+    max-height: 120px;
+    max-width: 100%;
 }
