--- a/static/main.css
+++ b/static/main.css
@@ -266,6 +266,16 @@ select {
     height: 34px;
 }
 
+input[type=text],
+input[type=password] {
+    width: 12rem;
+    height: 34px;
+    border: 1px solid #aaaaaa;
+    border-radius: 0.25rem;
+    padding: 0 0.5rem;
+    font-size: 1rem;
+}
+
 input[type=number] {
     width: 4rem;
     height: 34px;
