Create main profile page

--- a/static/main.css
+++ b/static/main.css
@@ -292,3 +292,11 @@ hr.form-rule {
 input[type=checkbox] + label {
     font-weight: normal;
 }
+
+.right {
+    text-align: right;
+}
+
+.payment-row {
+    color: forestgreen;
+}
